--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <h1>t12-housing-prices-visualization</h1>
+        <h1>Housing Price Index 1975-2021</h1>
         <div id="root"></div>
         <!--
       This HTML file is a template.
