--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,14 @@
                 across the US states. We wanted to create a tool to simplify the
                 process of studying this data using the US map as the base and a
                 color gradient to indicate ranges of HPI.
+
+                HPI values provide lots of information about current housing and stock market trends. Lower HPI values indicate lower average home prices, while higher HPI values indicate higher average home prices.
+
             </p>
+            <p>
+                For more information about HPI: 
+            </p>
+            <a href=https://www.investopedia.com/terms/h/house-price-index-hpi.asp>investopedia</a>
             <h2>About the Visualization</h2>
             <p>
                 The visualization above shows the state-wise HPI for a given
@@ -65,6 +72,29 @@
                 HPI value for that state. You can use the text entry box to
                 search for a year and quarter to update the map and color
                 gradient to correspond to that particular year.
+            </p>
+            <h2>How to Use</h2>
+            <p>
+                <h3>Map Component</h3>
+                <p>
+                    The map component features a slider for the year. To change the year shown on the map, simply drag the slider to your desired year. The map only shows Q1 data - for exact values, please view the graph.
+                </p>
+                <h3>Graph Component</h3>
+                <p>
+                    The graph shows different HPI values by state. To change the state shown, press the dropdown tab and select your desired state.
+                </p>
+
+            </p>
+            <h2>Notes</h2>
+            <p>
+                <h3>Year: 1980</h3>
+                <p>
+                    When the user places the year to 1980, the entire map becomes one color. This is because the dataset we used normalized the values from the year 1980. 
+                </p>
+                <h3>Grey Dot Inside Maryland</h3>
+                <p>
+                    Within Maryland lies a grey dot. This dot represents the capital of the United States of America, Washington D.C.
+                </p>
             </p>
         </div>
     </body>
