Added padding to text

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,12 @@
                     Within Maryland lies a grey dot. This dot represents the capital of the United States of America, Washington D.C. This is a non-interactive element of the map component, and since the dataset doesn't contain data on D.C., it isn't colored and clicking doesn't produce an alert.
                 </p>
             </p>
+            <h2>Collaborators</h2>
+            <ul>
+                <li>Patrick Loughran (<a href=https://github.com/pat-loughran >pat-loughran</a>)</li>
+                <li>Ritwik Prasad (<a href=https://github.com/ritwikn7>ritwikn7</a>)</li>
+                <li>Jeffrey Du (<a href=https://github.com/jdu828>jdu828</a>)</li>
+            </ul>
         </div>
     </body>
 </html>
